--- a/person/Makefile
+++ b/person/Makefile
@@ -1,4 +1,7 @@
-INC_DIR=-I ./inc
+INC_DIR=-I ./inc \
+		-I ../inc \
+		-I ../rbtree/inc \
+		-I ../timer/inc
 OBJ_DIR=./obj
 SRC_DIR=.
 
@@ -16,11 +19,11 @@ all:args ${DES_DIR_OBJ}
 #print the args to debug
 .PHONY:args
 args:
+	@echo " "
 	@echo "debug: DIR_SRC:${DIR_SRC}" 
 	@echo "           SRC:${SRC} "
 	@echo "           OBJ:${OBJ} "
 	@echo "   DES_DIR_OBJ:${DES_DIR_OBJ}"
-	@echo " "
 
 ${DES_DIR_OBJ}:${OBJ_DIR}/%.o:${SRC_DIR}/%.c
 	mkdir -p ${OBJ_DIR}
